refactor(session): adapt session use cases to WaitingQueue domain model